--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -146,6 +146,10 @@ import HeroVisual from "../../components/HeroVisual.astro";
         <li>Docker for development, Kubernetes for production</li>
         <li><strong>production mindset from day one</strong></li>
       </ul>
+
+      <div style="margin-top: 14px;">
+        <a class="btn" href="/en/how-we-work/">See how we work →</a>
+      </div>
     </div>
   </section>
 
