Refactor code structure for improved readability and maintainability

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -42,7 +42,7 @@ import HeroVisual from "../../components/HeroVisual.astro";
     </div>
 
     <div class="hero-right">
-      <HeroVisual src="/img/hero-rocket.png" />
+      <HeroVisual src="/img/hero-rocket.webp" />
       <div class="hero-terminal-wrap">
         <HeroTerminal lang="en" />
       </div>
